--- a/analysis/simulation_one_tissue_no_enrichment.Rmd
+++ b/analysis/simulation_one_tissue_no_enrichment.Rmd
@@ -30,7 +30,7 @@ plot_prior_inclusion <- function(results_dir,runtag,simutags,thins,group_prior_v
       param_df_susie <- load_parameters(results_dir, runtag, simutags, thin, group_prior_var_structure, "susie", file_name)
       y3 <- param_df_susie$`prior_liver|expression`
       y4 <- param_df_susie$prior_SNP
-      truth <- rbind(c(1,true_value_gene),c(2,true_value_gene),c(3,true_value_gene),c(4,true_value_SNP))
+      truth <- rbind(c(1,true_value_gene),c(2,true_value_SNP),c(3,true_value_gene),c(4,true_value_SNP))
       est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
       plot_par_4(truth,est,xlabels = c("Gene (ctwas)", "SNP (ctwas)", "Gene (susie)","SNP (susie)"),ylim=c(0,max(est[,2],truth[,2])),ylab="Prior inclusion", main=group_prior_var_structure)
     }
@@ -94,441 +94,153 @@ plot_enrichment <- function(results_dir, runtag, thins, group_prior_var_structur
 }
 ```
 
-
-## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0155)
-gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0155, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+## Enrichment=1
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
 runtag = "one_tissue"
-simutags <- paste(1, 1:20, sep = "-")
+simutags <- paste(1, 1:10, sep = "-")
 thins <- c(1)
 group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".Ftest.minp0.mingene0.parameters.RDS"
+file_name <- ".Gtest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
 ### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 0.0025
 true_value_SNP <- 0.0025
 plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
 ### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 10.81125
 true_value_SNP <- 10.81125
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
-### Regions with min_p_single=0.8
+## Enrichment=10
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
+runtag = "one_tissue"
+simutags <- paste(2, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- log(10)
+file_name <- ".Gtest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
 ### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- 0.025
 true_value_SNP <- 0.0025
 plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
 ### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 10.81125
 true_value_SNP <- 10.81125
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
-## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0185)
-gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0185, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+## Enrichment=20
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
 runtag = "one_tissue"
-simutags <- paste(2, 1:20, sep = "-")
+simutags <- paste(3, 1:10, sep = "-")
 thins <- c(1)
 group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".Ftest.minp0.mingene0.parameters.RDS"
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- log(20)
+file_name <- ".Gtest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
 ### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- 0.05
 true_value_SNP <- 0.0025
 plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
 ### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 15.43103
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
-true_value_SNP <- 0.0025
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 15.43103
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0200)
-gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0200, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
-runtag = "one_tissue"
-simutags <- paste(3, 1:20, sep = "-")
-thins <- c(1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
-true_value_SNP <- 0.0025
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 18.0348
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
-true_value_SNP <- 0.0025
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 18.0348
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-## Enrichment=1 (prior_gene = 0.0025, sigma_gene = 0.0215)
-gene prior = 2.5e-3, snp prior = 2.5e-3, sigma_gene = 0.0215, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
-runtag = "one_tissue"
-simutags <- paste(4, 1:20, sep = "-")
-thins <- c(1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
-true_value_SNP <- 0.0025
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 20.84147
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0025
-true_value_SNP <- 0.0025
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 20.84147
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0155)
-gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0155, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
-runtag = "one_tissue"
-simutags <- paste(5, 1:20, sep = "-")
-thins <- c(1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 10.81125
 true_value_SNP <- 10.81125
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
-### Regions with min_p_single=0.8
+## Enrichment=40
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
+runtag = "one_tissue"
+simutags <- paste(4, 1:10, sep = "-")
+thins <- c(1)
+group_prior_var_structures <- c("shared_all","shared_type")
+null_methods <- c("ctwas","susie")
+```
+
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- log(40)
+file_name <- ".Gtest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
 ### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- 0.1
+true_value_SNP <- 0.0025
 plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
 ### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
 true_value_gene <- 10.81125
 true_value_SNP <- 10.81125
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
-## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0185)
-gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0185, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
+
+## Enrichment=80
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_expression_enrichment/"
 runtag = "one_tissue"
-simutags <- paste(6, 1:20, sep = "-")
+simutags <- paste(5, 1:10, sep = "-")
 thins <- c(1)
 group_prior_var_structures <- c("shared_all","shared_type")
 null_methods <- c("ctwas","susie")
 ```
 
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- log(80)
+file_name <- ".Gtest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
 ### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- 0.2
+true_value_SNP <- 0.0025
 plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
 
 ### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 15.43103
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 15.43103
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0200)
-gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0200, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
-runtag = "one_tissue"
-simutags <- paste(7, 1:20, sep = "-")
-thins <- c(1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 18.0348
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 18.0348
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-## Enrichment=1 (prior_gene = 0.0034, sigma_gene = 0.0215)
-gene prior = 3.4e-3, snp prior = 3.4e-3, sigma_gene = 0.0215, sigma_snp = 0.0155, 7395 genes and 500000 SNPs
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue_test/"
-runtag = "one_tissue"
-simutags <- paste(8, 1:20, sep = "-")
-thins <- c(1)
-group_prior_var_structures <- c("shared_all","shared_type")
-null_methods <- c("ctwas","susie")
-```
-
-### All regions
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp0.mingene0.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 20.84147
-true_value_SNP <- 10.81125
-plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Regions with min_p_single=0.8
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0
-file_name <- ".minp08.mingene1.parameters.RDS"
-plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
-```
-
-### Prior Inclusion Probability
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 0.0034
-true_value_SNP <- 0.0034
-plot_prior_inclusion(results_dir,runtag,simutags,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
-```
-
-### Prior Variance
-```{r,echo=FALSE,fig.width= 8, fig.height= 4}
-true_value_gene <- 20.84147
+```{r,echo=FALSE,fig.width= 10, fig.height= 5}
+true_value_gene <- 10.81125
 true_value_SNP <- 10.81125
 plot_prior_variance(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP)
 ```
