--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,10 +13,10 @@ editor_options:
   [GWAS, LD, expr_weights](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
   
   [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
-  
-  [Training stability weights using munro's RNA data](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_munro_filtered.html)
-  
+
   [Training stability weights using munro's RNA data -- FUSION pipeline](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_fusionscale_rsqupdated.html)
+  
+  [Training stability weights using munro's RNA data -- FUSION pipeline, use top qtl for non-cs genes](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_fusionscale_rsqupdated_allhaveqtl.html)
 
 
 ## Deciding weights  
